--- a/app/src/main/res/layout/activity_game_offline.xml
+++ b/app/src/main/res/layout/activity_game_offline.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".view.MainActivity">
+    tools:context=".view.GameOfflineActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,6 +13,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/tvPlayOnline"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:fontFamily="casual"
