add play online

--- a/app/src/main/res/layout/activity_after_start.xml
+++ b/app/src/main/res/layout/activity_after_start.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".view.StartOfflineActivity">
+    tools:context=".view.offline.StartOfflineActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
